# Orpheus

./: .gitignore  README.md  TIMELINE_QUICK_REFERENCE.md  __init__.py  script test.py  setup.py
Alpha/: Dockerfile  Historical Volatility.ipynb  Strategy_Template copy.ipynb  Strategy_Template.ipynb  StreamSimulator.py  __init__.py  black-scholes.cpp  candle_maker.py  hist_candle_maker  option_covariance_matrix.ipynb  pricing_engine.py  requirements.txt  rtools.py  spread_maker.py  strategy_01.2.ipynb
Charts/: .env  BrokerConnection.py  DataCollector.py  Dockerfile  (+23 more)
Charts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Nexus/SECOND/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
Nexus/SECOND/src/: app.rs  debug.rs  lib.rs  main.rs
Nexus/SECOND/src/charts/: gauge.rs  mod.rs  price_chart.rs
Nexus/SECOND/src/layout/: mod.rs  module_container.rs  module_library.rs  workspace.rs
Nexus/SECOND/src/models/: layout.rs  mod.rs  modules.rs
Nexus/SECOND/src/modules/: backtest_editor.rs  earnings_history.rs  greeks_summary.rs  iv_metrics.rs  mod.rs  options_chain.rs  payoff_diagram.rs  portfolio_exposure.rs  price_chart.rs
Nexus/SECOND/src/pages/: backtest_workspace.rs  mod.rs  options_workspace.rs  portfolio_workspace.rs  stock_page.rs  symbol_workspace.rs
Nexus/Third/: Cargo.toml  README.md  index.html  tailwind.config.js
Nexus/Third/src/: app.rs  main.rs  state.rs
Nexus/Third/src/components/: mod.rs  panel.rs
Nexus/Third/src/pages/: backtesting_lab.rs  dashboard.rs  mod.rs  options_analysis.rs  portfolio_metrics.rs  settings.rs  symbol_research.rs
(+148 files in other folders)
