[package]
name = "nexus-third"
version = "0.1.0"
edition = "2021"
authors = ["Nexus"]
description = "Professional web-based quantitative research tool for options, portfolio metrics, and backtesting"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = "0.6"
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.trunk]
assets = []
